--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div id="happyHourDisplay"></div>
 <!-- LANDSCAPE WARNING -->
 <div id="landscapeWarning" style="display: none;">
     <div class="warning-content">
@@ -214,6 +215,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
