--- a/tetris.html
+++ b/tetris.html
@@ -1489,7 +1489,6 @@ let playerXP = 0;
 let playerCoins = 0;
 let unlockedThemes = ['classic', 'neon'];
 let unlockedMaps = ['20x10', '18x12'];
-let currentUser = null;
 let totalGamesPlayed = 0;
 
 let activeEvent = null;
@@ -1695,7 +1694,7 @@ import { createClient } from 'https://esm.sh/@supabase/supabase-js@2.39.3'
 
 const SUPABASE_URL = 'https://bmmaijlbpwgzhrxzxphf.supabase.co'
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJtbWFpamxicHdnemhyeHp4cGhmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4NjQ5MDcsImV4cCI6MjA4MjQ0MDkwN30.s0YQVnAjMXFu1pSI1NXZ2naSab179N0vQPglsmy3Pgw'
-
+let currentUser = null;
 const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
 async function loadCurrentUser() {
@@ -2814,6 +2813,8 @@ function getDifficultyEmoji(difficulty) {
         default: return '❓'
     }
 }
+
+// Inicializace při načtení stránky
 await loadCurrentUser()
 </script>
 </body>
