--- a/tetris.html
+++ b/tetris.html
@@ -1511,7 +1511,8 @@ setInterval(updateHappyHourIndicator, 60000);
 
 // Aktualizuj hned při načtení
 window.addEventListener('DOMContentLoaded', () => {
-    updateHappyHourIndicator();
+    startPageLoading();
+    updateHappyHourIndicator(); // Přidej tenhle řádek
 });
 
  // Happy Hours system
@@ -1520,7 +1521,8 @@ const HAPPY_HOURS = [15, 20]; // 15:00 a 20:00
 function isHappyHour() {
     const now = new Date();
     const hour = now.getHours();
-    return HAPPY_HOURS.includes(hour);
+    // Zobrazí se od 15:00 do 15:59 a od 20:00 do 20:59
+    return hour === 15 || hour === 20;
 }
 
 function getHappyHourMultiplier() {
@@ -2842,6 +2844,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
