--- a/tetris.html
+++ b/tetris.html
@@ -1197,9 +1197,9 @@ body {
 <button id="backBtn" onclick="window.location.href='hry.html'">⬅ Zpět</button>
 
 <div id="playerStats">
-    <div id="happyHourIndicator" style="display: none; padding: 8px 15px; background: linear-gradient(135deg, rgba(255, 215, 0, 0.3), rgba(255, 165, 0, 0.3)); border: 3px solid gold; border-radius: 12px; font-size: 18px; font-weight: bold; color: gold; text-shadow: 0 0 15px rgba(255, 215, 0, 0.9); box-shadow: 0 0 25px rgba(255, 215, 0, 0.5); animation: coinPulse 2s ease-in-out infinite;">
-        🎉 HAPPY HOUR 2× 🎉
-    </div>
+   <div id="happyHourIndicator" style="position: fixed; top: 20px; left: 50%; transform: translateX(-50%); padding: 10px 25px; background: linear-gradient(135deg, rgba(255, 215, 0, 0.95), rgba(255, 165, 0, 0.95)); border: 3px solid gold; border-radius: 12px; font-size: 20px; font-weight: bold; color: #fff; text-shadow: 0 0 15px rgba(255, 215, 0, 0.9); box-shadow: 0 0 30px rgba(255, 215, 0, 0.7); animation: coinPulse 2s ease-in-out infinite; z-index: 100;">
+    ⏰ Načítání...
+</div>
     <div id="levelDisplay">
         ⭐ Level <span id="playerLevel">1</span>
         <div class="xp-bar-container">
@@ -2867,6 +2867,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
