--- a/tetris.html
+++ b/tetris.html
@@ -1515,7 +1515,7 @@ function updateHappyHourIndicator() {
         indicator.style.background = 'rgba(100, 100, 100, 0.5)';
         indicator.style.borderColor = '#666';
         indicator.style.color = '#aaa';
-        indicator.textContent = `⏰ Happy Hour v ${next}`;
+        indicator.textContent = `⏰ Play Hour v ${next}`;
     }
 }
 // Aktualizuj indikátor každou minutu
@@ -2856,6 +2856,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
