--- a/tetris.html
+++ b/tetris.html
@@ -27,7 +27,7 @@
 <div id="mainMenu" class="centered" style="display:none;">
     <h1>🎮 TETRIS 🎮</h1>
     <button class="menuBtn" onclick="window.goToKlasika()">🕹️ Classicplay</button>
-    <button class="menuBtn" onclick="window.startTetris(selectedDifficulty)">🚀 Magicplay</button>
+    <button class="menuBtn" onclick="window.startMagicPlay()">🚀 Magicplay</button>
     <button class="menuBtn" onclick="window.location.href='tetrismulti.html'">🌐 Multiplayer</button>
     <button class="menuBtn" onclick="showSettingsMenu()">⚙️ Nastavení</button>
     <button class="menuBtn" onclick="showDifficultyMenu()">🎚️ Obtížnost</button>
@@ -321,4 +321,5 @@
 </body>
 
 </html>
+
 
