--- a/tetris.html
+++ b/tetris.html
@@ -47,7 +47,18 @@
 <div id="settingsMenu" class="centered" style="display:none;">
     <h1>⚙️ Nastavení</h1>
     <div style="display: flex; flex-direction: column; gap: 20px; align-items: center;">
-        
+     <!-- Casino Téma -->
+    <div style="background: rgba(30, 30, 60, 0.7); padding: 25px; border-radius: 12px; border: 2px solid #00ffff; min-width: 400px;">
+    <h3 style="color: #00ffff; margin-bottom: 15px; text-align: center;">🎰 Casino Režim</h3>
+    <div style="display: flex; justify-content: center; gap: 15px;">
+        <button class="menuBtn" onclick="toggleCasinoTheme()" style="min-width: 200px;">
+            💎 Přepnout Téma
+        </button>
+    </div>
+    <p style="text-align: center; color: #aaa; font-size: 12px; margin-top: 10px;">
+        Zlaté a červené casino efekty!
+    </p>
+</div>   
         <!-- Zvuk -->
         <div style="background: rgba(30, 30, 60, 0.7); padding: 25px; border-radius: 12px; border: 2px solid #00ffff; min-width: 400px;">
             <h3 style="color: #00ffff; margin-bottom: 15px; text-align: center;">🔊 Zvuk</h3>
@@ -328,4 +339,5 @@
 <script type="module" src="tetris.js"></script>
 </body>
 </html>
+
 
