--- a/tetris.html
+++ b/tetris.html
@@ -3164,10 +3164,11 @@ function getDifficultyEmoji(difficulty) {
         default: return '❓'
     }
 }
-await loadCurrentUser()
+loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
